/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Grpc.Interaction.Protobuf";

// Represents the Claim
message Claim {
    string name = 1;
    string value = 2;
    string valueType = 3;
}